--- a/.github/workflows/docs-trigger-build.yaml
+++ b/.github/workflows/docs-trigger-build.yaml
@@ -12,7 +12,7 @@ on:
 jobs:
   trigger:
     name: Trigger
-    runs-on: [self-hosted,linux]
+    runs-on: [self-hosted, x64, linux, ephemeral, zon-image-latest]
     if: contains(github.repository, 'ZeitOnline')
 
     steps:
